[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrsec"
version = "0.2.4"
description = "Simple parser combinator made in Python"
readme = "README.md"
authors = [
    { name = "Fernando Martínez González", email = "frndmartinezglez@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["parser-combinator"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/frndmg/pyrsec"
Docs = "https://frndmg.github.io/pyrsec"

[project.optional-dependencies]
dev = [
    "build",
    "twine",

    "black",
    "isort",
    "ruff",
    "pyright",

    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "hypothesis",
]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[tool.setuptools]
py-modules = []

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.md' --doctest-modules -vvv --cov pyrsec"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]
